<resources>
    <string name="app_name">Hi Android</string>
    <string name="text_in_scrollable_area">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    \n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    \n\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
    </string>
    <string name="greetings_header">This header will be changed!</string>
    <string name="change_layout_button">Сменить макет</string>
    <string name="caption_chekbox2">Не хочу читать</string>
    <string name="in_scrollview_button">...Согласен</string>
    <string name="greetings_text_replace_text">Публичная оферта продажи (души).</string>
    <string name="in_scrollview_checkbox">НЕ...</string>
    <string name="swtcher">Переключить внимание</string>
    <string name="full_name">Введите ваше имя, пжалста.</string>
    <string name="toggle_text2">ВЫкл</string>
    <string name="toggle_text1">Вкл</string>
    <string name="first_edittext_tooltip">Тултип для первого едита</string>
    <string name="fullname_edittext_tooltip">ФИО</string>
    <string name="cellnumber_edittext_tooltip">Тел.</string>
    <string name="age_edittext_tooltip">Возраст</string>
    <string name="password_edittext_tooltip">пароль</string>
    <string name="googleid_edittext_tooltip">Google ID</string>
    <string name="only_swtcher">Свитчер</string>
    <string name="fake_name">Вася Пупкин</string>
</resources>