<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scrollIndicators="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="text"
                android:textSize="16sp"
                android:tooltipText="@string/first_edittext_tooltip"
                android:typeface="sans" />

            <EditText
                android:id="@+id/person_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:tooltipText="@string/fullname_edittext_tooltip"
                android:typeface="sans" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="phone"
                android:textSize="16sp"
                android:tooltipText="@string/cellnumber_edittext_tooltip"
                android:typeface="sans" />

            <EditText
                android:id="@+id/age_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="number"
                android:textSize="16sp"
                android:tooltipText="@string/age_edittext_tooltip"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="textPassword"
                android:textSize="16sp"
                android:tooltipText="@string/password_edittext_tooltip"
                android:typeface="serif" />


            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:tooltipText="@string/googleid_edittext_tooltip"
                android:typeface="monospace" />

            <CalendarView
                android:id="@+id/main_calendar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/change_layout_button"
        android:textSize="14dp" />
</LinearLayout>